language/move-lang/tests/move_check/typing/exp_list_nested.exp
error: 

   ┌── tests/move_check/typing/exp_list_nested.move:6:13 ───
   │
 6 │         (0, (S{}, R{}))
   │             ^^^^^^^^^^ Invalid result list item. Expected an expression of a single type but got an expression of the list: (0000000000000000000000000000000000000000000000000000000008675309.M.S,0000000000000000000000000000000000000000000000000000000008675309.M.R<_>)
   ·
 6 │         (0, (S{}, R{}))
   │             ---------- Type found here
   │

